hphp/test/zend/bad/tests/security/open_basedir_link.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no links on Windows');
}
?>